Fix spacing between headings and block elements  🐿2.5.10

--- a/scss/_headings.scss
+++ b/scss/_headings.scss
@@ -45,7 +45,9 @@
 		@include oTypographyMargin($top: $pSize);
 	}
 
-	& + figure {
+	& + figure,
+	& + div,
+	& + aside {
 		@include oTypographyMargin($top: $figureSize);
 	}
 }
